--- a/main.html
+++ b/main.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RPS</title>
+    <script src="function.js" defer></script>
 </head>
 <body>
-    <p id="test"></p>
-    <script src="function.js"></script>
+    <h1>RPS GAME</h1>
+    <div class="choice-wrap">
+        <button id="rock" class="choice">Rock</button>
+        <button id="paper" class="choice">Paper</button>
+        <button id="scissors" class="choice">Scissors</button>
+    </div>
+    <div class="results score">
+        <h3>Score: human:<span id="human"></span> / computer:<span id="computer"></span> </h3>
+    </div>
 </body>
 </html>
